Wrap posts in a flex container to prevent width from overflowing viewport

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -333,6 +333,10 @@ td, th {
     padding: 10px;
 }
 
+.section__wrapper {
+    display: flex;
+}
+
 .section__header {
     color: white;
     text-align: center;
@@ -340,7 +344,7 @@ td, th {
 
 .section__description {
     color: var(--dark-txt-color);
-    font-size: 1em;
+    font-size: 1.1em;
     line-height: 1.6em;
     margin-top: 50px;
     background-color: #eee;
@@ -371,7 +375,7 @@ td, th {
 
 .posts {
     width: 600px;
-    padding: 0 30px 30px 0;
+    padding: 0 30px 0 30px;
 }
 
 .posts--center {
@@ -460,6 +464,6 @@ td, th {
     display: flex;
     justify-content: flex-start;
     column-gap: 10px;
-    margin: 0;
+    margin: 0 0 50px 0;
     padding: 0;
 }
